namespace WebAPI_PrintingSystem.DTOs
{
    public class CardAuthenticationRequestDTO
    {
        public Guid CardID { get; set; }
    }
}
