namespace WebAPI_PrintingSystem.DTOs
{
    public class CreditGroupRequestDTO
    {
        public string Group { get; set; }
        public decimal QuotaCHF { get; set; }
    }
}
