namespace WebAPI_PrintingSystem.DTOs
{
    public class CreditUIDRequestDTO
    {
        public Guid UserID { get; set; }
        public decimal QuotaCHF { get; set; }
    }
}
