namespace WebAPI_PrintingSystem.DTOs
{
    public class CreditUsernameRequestDTO
    {
        public string? Username { get; set; }
        public decimal QuotaCHF { get; set; }
        public string? Group { get; set; }

    }
}
